# Visual_RM

./: README.md  readme.txt
base_tasks/install/: local_setup.sh  setup.sh
base_tasks/log/: latest_build
base_tasks/luogu/1/: B2005.cpp  P1001.cpp  P5703.cpp
base_tasks/luogu/2/: P5713.cpp  p2433.cpp  p5710.cpp  p5711.cpp
base_tasks/luogu/3/: P5718.cpp  P5719.cpp
base_tasks/luogu/4/: P1047.cpp  P1427.cpp  P5727.cpp  P5729.cpp
base_tasks/luogu/5/: P1914.cpp  P5015.cpp  P5733.cpp
base_tasks/luogu/6/: P5736.cpp  P5737.cpp  P5739.cpp
base_tasks/src/install/: local_setup.sh  setup.sh
base_tasks/src/learning_interface/: CMakeLists.txt
base_tasks/src/learning_interfence/: CMakeLists.txt
base_tasks/src/learning_py/: setup.py
base_tasks/src/learning_service/: package.xml  setup.py
base_tasks/src/learning_topic/: package.xml  setup.py
base_tasks/src/log/: latest_build
base_tasks/work3/install/: local_setup.sh  setup.sh
base_tasks/work3/log/: latest_build
base_tasks/work4/install/: local_setup.sh  setup.sh
base_tasks/work4/log/: latest_build
base_tasks/work5/install/: local_setup.sh  setup.sh
base_tasks/work5/log/: latest_build
exam_tasks/work1/install/: local_setup.sh  setup.sh
exam_tasks/work1/log/: latest_build
moudle/install/: local_setup.sh  setup.sh
moudle/log/: latest_build
moudle/src/example_cpp/: CMakeLists.txt  package.xml
moudles/Topic/src/example_topic/: CMakeLists.txt
moudles/Topic/src/example_topic/src/: TopicPublisher01.cpp  TopicSubscribe01.cpp
test/install/: local_setup.sh  setup.sh
test/log/: latest_build
(+324 files in other folders)
